<resources>
    <string name="app_name">Empire Movies</string>
    <string name="about">About</string>
    <string name="app_information">App information</string>
    <string name="share">Share</string>
    <string name="share_the_app_with_friends_and_family">Share the app with friends and family</string>
    <string name="appsettings">App\'s settings</string>
    <string name="settings">Settings</string>
    <string name="search_your_favorite_movie">Search your favorite movie</string>
    <string name="search_title">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trailer_image_large">Trailer Image</string>
    <string name="read_more">READ MORE</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="poster_for_the_selected_movie">Poster for the selected movie</string>
    <string name="trailer_image">Trailer Image</string>
    <string name="back_button">Back Button</string>
    <string name="aboutText">Empire Movie App is developed by Daniel Waiguru, a passionate junior Android developer with interest in ML and AI</string>
    <string name="ok_button">Ok</string>
    <string name="name">Empire Movie Show</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="login">Login</string>
    <string name="password">Confirm password</string>
    <string name="username">Username</string>
    <string name="persons_name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me_and_keep_me_signed_in">Remember me and keep me signed in</string>
    <string name="new_user_sign_up">New user? Sign Up</string>
    <string name="policy">By signing up you agree to our conditions and privacy policy</string>
    <string name="hey_get_on_board">Hey, get on board</string>
    <string name="registered_sign_in">Registered? Sign In</string>
    <string name="logout">Logout</string>
    <string name="logout_option">Logout option</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync movies periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="search">Search movie</string>
    <string name="error_text">Username and password are required!!</string>
    <string name="password_error">Password should contain at least 6 characters</string>
    <string name="username_error">Username should contain at least 5 characters</string>
    <string name="transition_image">tPoster</string>
    <string name="transition_movie_title">tName</string>
    <string name="movie_extra">movie</string>
    <string name="login_error">Invalid Username/Password</string>
</resources>