<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

    </PreferenceCategory>
    <PreferenceCategory android:title="Notifications">
    <SwitchPreference
        android:title="Data sync notifications"
        android:defaultValue="true"
        android:key="new_message_notification"/>
    <SwitchPreference android:defaultValue="true"
        android:title="Vibrate"
        android:summary="Vibrate on new notifications"
        android:key="key_vibrate" />
    </PreferenceCategory>
    <PreferenceCategory app:title="About">
        <Preference app:title="Version"
            app:summary="1.0" />
        <Preference app:title="Send Feedback"
            android:summary="Questions? Concerns? send us feedback"
            android:key="send_feedback">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://danielwaiguru.tech"/>
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>