<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailsFragment">
    <ImageView
        android:id="@+id/trailer"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/firstman"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:contentDescription="@string/trailer_image_large" />

    <ImageView
        android:id="@+id/poster"
        android:layout_width="120dp"
        android:layout_height="200dp"
        android:src="@drawable/revenge"
        android:scaleType="fitXY"
        android:contentDescription="@string/poster_for_the_selected_movie"
        app:layout_constraintTop_toBottomOf="@id/trailer"
        app:layout_constraintBottom_toBottomOf="@id/trailer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        />


    <ImageView
        android:id="@+id/play_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_circle_play"
        android:tint="@color/playIconColor"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toBottomOf="@id/trailer"
        app:layout_constraintBottom_toBottomOf="@id/trailer"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/play_button"
        app:layout_constraintStart_toEndOf="@id/poster"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="8dp"
        android:paddingEnd="16dp">
        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/release_date"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            />


    </LinearLayout>
    <TextView
        android:id="@+id/movie_description"
        android:layout_width="0dp"
        android:textSize="17sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_description">

        <TextView
            android:id="@+id/read_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/read_more"
            android:textColor="@color/ratingStarsColor"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_watchlist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/read_more"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>